k8s/overlays/prod/patch-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app
spec:
  template:
    metadata:
      labels:
        environment: prod
    spec:
      containers:
        - name: app
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 1Gi
